Wire product/category writes through the outbox and switch search to Elasticsearch
- ProductService and CategoryService enqueue an outbox event on every write
- reindexAll() and the category-delete cascade page through results in bounded
  batches (200 at a time, each its own transaction) instead of loading everything at once
- Product listing/reindex use an @EntityGraph to avoid an N+1 on category
- SearchService now queries Elasticsearch instead of JPA LIKE, with fuzzy multi_match
  ranking and an ACTIVE-only filter
- Renamed the reindex endpoint from /reindex to /index-jobs (REST convention: no verbs
  in URLs), returning a structured JSON body instead of plain text
- Fixed AccessDeniedException falling through the catch-all exception handler into a
  500 instead of a proper 403